--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@sendgrid/mail": "^8.1.3",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
@@ -20,13 +21,17 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mailgun-js": "^0.22.0",
+    "nodemailer": "^6.9.15",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/mailgun-js": "^0.22.18",
     "@types/node": "^22.5.3",
+    "@types/nodemailer": "^6.4.15",
     "nodemon": "^3.1.4",
     "prisma": "^5.19.1",
     "ts-node": "^10.9.2",
